add mail service

--- a/src/authentication/lang/en.json
+++ b/src/authentication/lang/en.json
@@ -16,7 +16,8 @@
     "recoveryAcc": {
       "email": {
         "require": "{{.ErrorField}} is required",
-        "type": "validation failed on field 'Email', condition: email"
+        "type": "validation failed on field 'Email', condition: email",
+        "exist": "{{.ErrorField}} is not exist"
       }
     }
   }
